# local-confluence-indexer

./: .env.example  .gitignore  AGENTS.md  README.md  confluence_local_sync_index_spec.md  confluence_targets.example.yaml  pyproject.toml  requirements.txt
.agents/skills/confluence-python-git/: SKILL.md
.agents/skills/confluence-python-git/agents/: openai.yaml
docs/: codex-cli-usage.md  operations.md
scripts/: run_incremental_sync.sh
tests/: _fake_vector.py  conftest.py  test_build_doc_index.py  test_db.py  test_markdown_converter.py  test_search_docs.py  test_sync_integration.py  test_target_config.py  test_vector_index.py  test_vector_search.py
tools/: build_doc_index.py  confluence_client.py  db.py  markdown_converter.py  resolve_sync_targets.py  search_docs.py  sync_confluence.py  target_config.py  utils.py  vector_index.py
