[project]
name = "local-confluence-indexer"
version = "0.1.0"
description = "Confluence Cloud のローカル同期と検索を行うツール"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "markdownify>=0.11.6",
  "python-dateutil>=2.8.2",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.1",
  "requests>=2.31.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "responses>=0.25.0",
]

[tool.uv]
package = false
